# laser-pdf

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
assets/: README.md
assets/icc_profiles/: README.md
scripts/: testing.nu
src/: break_text_into_lines.rs  elements.rs  flex.rs  image.rs  lib.rs  lists.rs  main.rs  markup.rs  serde_elements.rs  shapes.rs  svg.rs  test_utils.rs  text.old.rs  text.rs  utils.rs  widget.rs
src/elements/: align_location_bottom.rs  align_preferred_height_bottom.rs  break_list.rs  break_whole.rs  center_in_preferred_height.rs  changing_title.rs  circle.rs  column.rs  debug.rs  empty.rs  expand_to_preferred_height.rs  force_break.rs  h_align.rs  h_center.rs  image.rs  line.rs  link.rs  max_width.rs  min_first_height.rs  new_rich_text.rs  none.rs  padding.rs  page.rs  pin_below.rs  rectangle.rs  ref_element.rs  repeat_after_break.rs  repeat_bottom.rs  rich_text.rs  rotate.rs  row.rs  shrink_to_fit.rs  stack.rs  styled_box.rs  svg.rs  table_row.rs  text.rs  title_or_break.rs  titled.rs  v_gap.rs
src/elements/snapshots/: laser_pdf__elements__align_location_bottom__tests__breakable-2.snap  laser_pdf__elements__align_location_bottom__tests__breakable.snap  laser_pdf__elements__align_location_bottom__tests__pre_break-2.snap  laser_pdf__elements__align_location_bottom__tests__pre_break.snap  laser_pdf__elements__align_location_bottom__tests__preferred_height-2.snap  laser_pdf__elements__align_location_bottom__tests__preferred_height.snap  laser_pdf__elements__align_location_bottom__tests__unbreakable-2.snap  laser_pdf__elements__align_location_bottom__tests__unbreakable.snap  laser_pdf__elements__align_preferred_height_bottom__tests__breakable-2.snap  laser_pdf__elements__align_preferred_height_bottom__tests__breakable.snap  laser_pdf__elements__align_preferred_height_bottom__tests__pre_break-2.snap  laser_pdf__elements__align_preferred_height_bottom__tests__preferred_breaks-2.snap  (+53 more)
src/fonts/: builtin.rs  mod.rs  truetype.rs
src/serde_elements/: elements.rs
src/test_utils/: assert_passes.rs  binary_snapshots.rs  build_element.rs  element_proxy.rs  fake_image.rs  fake_text.rs  frantic_jumper.rs  old.rs  record_passes.rs
src/text/: lines.rs  pieces.rs  shaping.rs
src/widgets/: mod.rs
(+18 files in other folders)
