[package]
name = "laser-pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printpdf = { path = "../printpdf", version = "0.3.2" }
stb_truetype = "0.3.1"
lopdf = "0.26"
serde = { version = "1.0", features = ["derive"] }
usvg = { version = "0.11.0", default-features = false }
svgtypes = "0.5.0"
kurbo = "0.8.1"
