[package]
name = "laser-pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# printpdf = { path = "../printpdf", version = "0.3.2" }
printpdf = { git = "https://github.com/escola-ch/printpdf-fork.git" }
stb_truetype = "0.3.1"
lopdf = { version = "0.27", default_features = false }
serde = { version = "1.0", features = ["derive"] }
usvg = { version = "0.11.0", default-features = false }
svgtypes = "0.5.0"
kurbo = "0.8.1"
serde_json = "1.0.103"
itertools = "0.11.0"
pdf-core-14-font-afms = "0.1.0"
afm = "0.1.2"
pom = "1.1.0"

[dev-dependencies]
insta = "1.41.1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
