[package]
name = "laser-pdf"
version = "0.2.0"
license = "MIT"
keywords = ["pdf"]
repository = "https://github.com/laser-pdf/laser-pdf"
description = "A Rust library for programmatic PDF generation with precise, predictable layout control."
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
usvg = { version = "0.43.0", default-features = false }
svgtypes = "0.5.0"
kurbo = "0.8.1"
serde_json = "1.0.103"
itertools = "0.14.0"
pdf-core-14-font-afms = "0.1.0"
afm = "0.1.2"
pom = "1.1.0"
pdf-writer = "0.12.0"
ttf-parser = "0.25.0"
subsetter = { version = "0.2.3", default-features = false }
typst-utils = "0.12.0"
miniz_oxide = "0.8.0"
rustybuzz = "0.20.1"
svg2pdf = "0.12.0"
icu_segmenter = "1.5.0"
icu_properties = "1.5.1"
image = "0.25.6"
elsa = "1.11.2"

[dev-dependencies]
insta = "1.41.1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
